--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,6 @@
 set-window-option -g mode-keys vi
 set-option -g status-keys vi
 set-option -g default-terminal screen-256color
-set -g prefix C-a
 bind-key C-a last-window
 
 # status bar tweaks
@@ -26,8 +25,23 @@ bind Down resize-pane -D 5
 bind Right resize-pane -R 5
 bind Left resize-pane -L 5
 
-# Enable mouse support (works in iTerm)
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
+# split windows
+bind | split-window -h
+bind = split-window -v
+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+unbind +
+bind + \
+  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+  swap-pane -s tmux-zoom.0 \;\
+  select-window -t tmux-zoom
+
+unbind -
+bind - \
+  last-window \;\
+  swap-pane -s tmux-zoom.0 \;\
+  kill-window -t tmux-zoom
