--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set-window-option -g mode-keys vi
 set-option -g status-keys vi
 set-option -g default-terminal screen-256color
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 bind-key C-a last-window
 
 # status bar tweaks
